tried adding z-index to dislike button to see if that would prevent modal from displaying if pressed - did not work

--- a/app/assets/stylesheets/components/_result_card.scss
+++ b/app/assets/stylesheets/components/_result_card.scss
@@ -195,6 +195,7 @@
   opacity: 0.8;
   cursor: pointer;
   padding: 0;
+  z-index: 1;
 }
 
 .disliked-card {
